fix: search bar in dark mode & toc design

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -113,6 +113,15 @@ html {
     .aa-Form:focus-within{
         @apply shadow-[0_0_2px_0_rgba(0,0,0,0.3)] border-link;
     }
+
+    .aa-DetachedFormContainer {@apply border-0 shadow-none;}
+    &[data-theme='dark'] .aa-DetachedSearchButtonPlaceholder{@apply text-card;}
+    &[data-theme='dark'] .aa-DetachedOverlay{ @apply bg-fg; }
+    &[data-theme='dark'] .aa-DetachedSearchButton{@apply bg-fg;}
+    &[data-theme='dark'] .aa-DetachedContainer, .aa-DetachedContainer .aa-Panel { @apply bg-gray-1000 shadow-inner border border-muted; }
+    &[data-theme='dark'] .aa-Form{@apply text-gray-0 border-0 bg-fg shadow-none;} 
+    &[data-theme='dark'] .aa-Input {@apply text-gray-0;}
+    &[data-theme='dark'] .aa-Input::placeholder {@apply text-gray-0;}
     /* algolia */
     .DocSearch-Button {
         @apply text-inactive rounded-sm h-8 w-8 bg-card justify-center mr-3;
@@ -160,15 +169,18 @@ html {
         }
     }
     .theme-doc-toc-mobile {
+        @apply bg-card px-6 py-5.5 pb-0 rounded;
         & > button { 
-            @apply px-0 flex justify-start;
+            @apply p-0 pb-5.5 flex justify-between;
             &::after {
-                @apply order-first mr-5;
+                @apply order-last ml-5;
                 background-image: var(--ifm-menu-link-sublist-icon);
                 background-size: 70%;
             }
         }
+        & ul li {@apply my-5 mx-0; }
     }
+    &[data-theme='dark'] .theme-doc-toc-mobile {@apply bg-fg;}
 
     /* SIDEBAR */
     .theme-doc-sidebar-container {
